--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
     "bootstrap": "^3.4.1",
+    "highcharts": "^7.2.1",
+    "highcharts-angular": "^2.4.0",
     "jquery": "^3.4.1",
     "ng-bootstrap": "^1.6.3",
     "ngx-bootstrap": "^5.2.0",
