--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "highcharts-angular": "^2.4.0",
     "jquery": "^3.4.1",
     "ng-bootstrap": "^1.6.3",
+    "ng-katex": "^2.0.3",
     "ngx-bootstrap": "^5.2.0",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.3",
